src/index.scss
@import './fonts/fonts.scss';
@import '../node_modules/modern-normalize/modern-normalize.css';

body {
  font-family: 'Roboto', sans-serif;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

main {
  position: relative;
  overflow-y: scroll;

  @media screen and (min-width: 768px) {
    min-height: 1024px;
  }

  @media screen and (max-width: 766px) {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  @media screen and (min-width: 1080px) {
    min-height: 927px;
  }
}

.item-appear {
  opacity: 0;
}
.item-appear-active {
  opacity: 1;
  transition: opacity 500ms ease-in;
}
.item-appear-done {
  opacity: 1;
}

.item-2-appear {
  opacity: 0;
  transform: translateY(-50%) scale(0);
}
.item-2-appear-active {
  opacity: 0.8;
  transform: translateY(0) scale(1) rotate(360deg);
  transition: all 500ms ease-in 0.2s;
}
.item-2-appear-done {
  opacity: 1;
  transform: translateY(0) scale(1) rotate(360deg);
  transition: all 500ms ease-in;
}

.item-3-appear {
  opacity: 0;
  transform: translateX(50%);
}
.item-3-appear-active {
  opacity: 0.8;
  transform: translateX(0);
  transition: all 800ms ease-in 0.5s;
}
.item-3-appear-done {
  opacity: 1;
  transform: translateX(0);
  transition: all 800ms ease-in 0.5s;
}

.item-4-appear {
  opacity: 0;
  // transform: scale(0.8);
}
.item-4-appear-active {
  opacity: 0.8;
  // transform: scale(1);
  transition: all 1000ms ease-in 0.7s;
}
.item-4-appear-done {
  opacity: 1;
  // transform: scale(1);
  transition: all 1000ms ease-in 0.7s;
}

